--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,12 +2,9 @@ name: Docker builds
 
 on:
   push:
-#  workflow_dispatch:
-#    inputs:
-#      environment:
-#        description: 'The environment to dispatch (dev,stage,prod)'
-#        required: true
-#        default: 'dev'
+  release:
+    types: [published]
+
 
 jobs:
   build-docker-images:
