--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,14 +17,20 @@ jobs:
     steps:
       - name: git-checkout
         uses: actions/checkout@v2
+      # Load ENV VARS from .env file
       - name: load-dotenv
         id: dotenv
         uses: falti/dotenv-action@v0.2.7
-      # Print some info
+      # Get a concise release tag
+      - name: get-release-tag
+        id: release
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+      # Print debug info
       - name: info
         id: info
         run: |
           echo "EVENT: ${{ github.event_name }}"
+          echo "RELEASE_TAG: ${{ steps.release.outputs.tag }}
           echo "CATE_VERSION: ${{ steps.dotenv.outputs.cate_version }}"
           echo "CATE_INSTALL_MODE: ${{ steps.dotenv.outputs.cate_install_mode }}"
           echo "XCUBE_VERSION: ${{ steps.dotenv.outputs.xcube_version }}"
@@ -33,7 +39,9 @@ jobs:
       # Build and push docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: cate-jupyter-build-push-docker-image-latest
-        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+#        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+        # testing
+        if: ${{ github.event_name == 'push'}}
         with:
           image: ${{ env.ORG_NAME }}/${{ env.APP_NAME }}
           tags: master, latest
