--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JUPYTER_VERSION=hub-1.4.2
 
 CATE_INSTALL_MODE=release
-CATE_VERSION=v3.0.1.dev1
+CATE_VERSION=v3.1.3
 
-XCUBE_CCI_VERSION=0.9.0
-XCUBE_VERSION=0.9.1
+XCUBE_CCI_VERSION=0.9.5
+XCUBE_VERSION=0.10.2
