install xcube and xcube-cci from github

--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ JUPYTER_VERSION=hub-1.4.2
 CATE_INSTALL_MODE=release
 CATE_VERSION=v3.1.3
 
-XCUBE_CCI_VERSION=0.9.5
-XCUBE_VERSION=0.10.2
+XCUBE_INSTALL_MODE=release
+XCUBE_CCI_VERSION=0.9.6
+XCUBE_VERSION=0.11.2
+
+INSTALL_MOOC=0
