--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,8 +33,10 @@ jobs:
           echo "RELEASE_TAG: ${{ steps.release.outputs.tag }}"
           echo "CATE_VERSION: ${{ steps.dotenv.outputs.cate_version }}"
           echo "CATE_INSTALL_MODE: ${{ steps.dotenv.outputs.cate_install_mode }}"
+          echo "XCUBE_INSTALL_MODE: ${{ steps.dotenv.outputs.xcube_install_mode }}"
           echo "XCUBE_VERSION: ${{ steps.dotenv.outputs.xcube_version }}"
           echo "XCUBE_CCI_VERSION: ${{ steps.dotenv.outputs.xcube_cci_version }}"
+          echo "INSTALL_MOOC: ${{ steps.dotenv.outputs.install_mooc }}"
           echo "JUPYTER_VERSION: ${{ steps.dotenv.outputs.jupyter_version }}"
       # Build and push docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
@@ -44,7 +46,7 @@ jobs:
           image: ${{ env.ORG_NAME }}/${{ env.APP_NAME }}
           tags: master, latest
           dockerfile: cate-jupyter.dockerfile
-          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }}
+          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_install_mode }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }},INSTALL_MOOC=${{ steps.dotenv.outputs.install_mooc }}
           registry: quay.io
           username: ${{ secrets.QUAY_DOCKER_REPO_USERNAME }}
           password: ${{ secrets.QUAY_DOCKER_REPO_PASSWORD }}
@@ -56,7 +58,7 @@ jobs:
           image: ${{ env.ORG_NAME }}/${{ env.APP_NAME }}
           tags: ${{ steps.release.outputs.tag }}
           dockerfile: cate-jupyter.dockerfile
-          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }}
+          buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_install_mode }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }},INSTALL_MOOC=${{ steps.dotenv.outputs.install_mooc }}
           registry: quay.io
           username: ${{ secrets.QUAY_DOCKER_REPO_USERNAME }}
           password: ${{ secrets.QUAY_DOCKER_REPO_PASSWORD }}
