--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-JUPYTER_VERSION=hub-1.4.2
+JUPYTER_VERSION=hub-3.0.0
 
 CATE_INSTALL_MODE=release
-CATE_VERSION=v3.1.3
+CATE_VERSION=v3.1.4.dev4
 
 XCUBE_INSTALL_MODE=release
-XCUBE_CCI_VERSION=0.9.6
-XCUBE_VERSION=0.11.2
+XCUBE_CCI_VERSION=0.9.7
+XCUBE_VERSION=0.13.0.dev3
 
 INSTALL_MOOC=0
