use latest xcube cci version from master

--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ CATE_INSTALL_MODE=release
 CATE_VERSION=v3.1.4.dev4
 
 XCUBE_INSTALL_MODE=release
-XCUBE_CCI_VERSION=0.9.7
-XCUBE_VERSION=0.13.0.dev3
+XCUBE_VERSION=0.13.0.dev7
+XCUBE_CCI_INSTALL_MODE=branch
+XCUBE_CCI_VERSION=master
 
 INSTALL_MOOC=0
