use latest xcube-cci release

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ CATE_VERSION=v3.1.4.dev4
 
 XCUBE_INSTALL_MODE=release
 XCUBE_VERSION=0.13.0.dev8
-XCUBE_CCI_INSTALL_MODE=branch
-XCUBE_CCI_VERSION=master
+XCUBE_CCI_INSTALL_MODE=release
+XCUBE_CCI_VERSION=0.9.8.dev0
 
 INSTALL_MOOC=0
