--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 JUPYTER_VERSION=python-3.9
 
 CATE_INSTALL_MODE=release
-CATE_VERSION=v3.1.4.dev4
+CATE_VERSION=v3.1.5
 
 XCUBE_INSTALL_MODE=release
-XCUBE_VERSION=0.13.0.dev8
+XCUBE_VERSION=0.13.0
 XCUBE_CCI_INSTALL_MODE=release
-XCUBE_CCI_VERSION=0.9.8.dev1
+XCUBE_CCI_VERSION=0.9.8
 
 INSTALL_MOOC=0
