--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       APP_NAME: cate-jupyter
       ORG_NAME: ccitools
+      CATE_APP_NAME: cate
     steps:
       - name: git-checkout
         uses: actions/checkout@v2
@@ -65,7 +66,7 @@ jobs:
           password: ${{ secrets.QUAY_DOCKER_REPO_PASSWORD }}
       # Build and push cate docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
-        name: cate-jupyter-build-push-docker-image-latest
+        name: cate-build-push-docker-image-latest
         if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
         with:
           image: ${{ env.ORG_NAME }}/${{ env.CATE_APP_NAME }}
@@ -77,7 +78,7 @@ jobs:
           password: ${{ secrets.QUAY_DOCKER_REPO_PASSWORD }}
       # Build and push cate docker release to quay.io when the event is a 'release'
       - uses: mr-smithers-excellent/docker-build-push@v5
-        name: cate-jupyter-build-push-docker-image-release
+        name: cate-build-push-docker-image-release
         if: ${{ github.event_name == 'release' }}
         with:
           image: ${{ env.ORG_NAME }}/${{ env.CATE_APP_NAME }}
