--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 JUPYTER_VERSION=python-3.9
 
 CATE_INSTALL_MODE=release
-CATE_VERSION=v3.1.6
+CATE_VERSION=v3.1.6.test
 
 XCUBE_INSTALL_MODE=release
 XCUBE_VERSION=1.0.1
