--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,10 +43,12 @@ jobs:
       # Build and push docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: cate-jupyter-build-push-docker-image-latest
-        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+#        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'tejas-xxx-revise-docker-build-cate'  }}
         with:
           image: ${{ env.ORG_NAME }}/${{ env.APP_NAME }}
-          tags: master, latest
+#          tags: master, latest
+          tags: test
           dockerfile: cate-jupyter.dockerfile
           buildArgs: JUPYTER_VERSION=${{ steps.dotenv.outputs.jupyter_version }},CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_install_mode }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_cci_install_mode }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }},INSTALL_MOOC=${{ steps.dotenv.outputs.install_mooc }}
           registry: quay.io
@@ -67,10 +69,12 @@ jobs:
       # Build and push cate docker image 'latest' to quay.io when the event is a 'push' and branch 'master'
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: cate-build-push-docker-image-latest
-        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+#        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'master'  }}
+        if: ${{ github.event_name == 'push' && steps.release.outputs.tag == 'tejas-xxx-revise-docker-build-cate'  }}
         with:
           image: ${{ env.ORG_NAME }}/${{ env.CATE_APP_NAME }}
-          tags: master, latest
+#          tags: master, latest
+          tags: test
           dockerfile: cate.Dockerfile
           buildArgs: CATE_INSTALL_MODE=${{ steps.dotenv.outputs.cate_install_mode }},CATE_VERSION=${{ steps.dotenv.outputs.cate_version }},XCUBE_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_install_mode }},XCUBE_VERSION=${{ steps.dotenv.outputs.xcube_version }},XCUBE_CCI_INSTALL_MODE=${{ steps.dotenv.outputs.xcube_cci_install_mode }},XCUBE_CCI_VERSION=${{ steps.dotenv.outputs.xcube_cci_version }},INSTALL_MOOC=${{ steps.dotenv.outputs.install_mooc }}
           registry: quay.io
