--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ CATE_INSTALL_MODE=release
 CATE_VERSION=v3.1.6.test
 
 XCUBE_INSTALL_MODE=release
-XCUBE_VERSION=v1.0.1
+XCUBE_VERSION=1.0.1
 XCUBE_CCI_INSTALL_MODE=release
 XCUBE_CCI_VERSION=0.9.8
 
