--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 JUPYTER_VERSION=python-3.9
 
 CATE_INSTALL_MODE=release
-CATE_VERSION=v3.1.6.test
+CATE_VERSION=v3.1.6
 
 XCUBE_INSTALL_MODE=release
-XCUBE_VERSION=1.0.1
+XCUBE_VERSION=1.13.0
 XCUBE_CCI_INSTALL_MODE=release
 XCUBE_CCI_VERSION=0.9.8
 
