install cate-jl-ext

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JUPYTER_VERSION=python-3.9
+JUPYTER_VERSION=python-3.10
 
 CATE_INSTALL_MODE=release
 CATE_VERSION=v3.1.6
@@ -9,3 +9,6 @@ XCUBE_CCI_INSTALL_MODE=release
 XCUBE_CCI_VERSION=0.9.8
 
 INSTALL_MOOC=0
+
+CATE_JL_EXT_INSTALL_MODE=pip
+CATE_JL_EXT_VERSION=main
